fix alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -197,11 +197,16 @@ select[data-testid="field-group-select"] > option:first-child {
 }
 
 /** Help Guide **/
-a[href="/studio/desk/guide"] {
-  position: absolute;
-  bottom: 8px;
-  width: calc(100% - 16px);
+div[aria-label="List of Content"] {
+  min-height: calc(100vh - 260px);
+}
+
+div[aria-label="List of Content"] > div:last-child {
   border-top: 1px solid var(--card-border-color);
-  padding-top: 8px;
+  position: absolute;
+  width: 100%;
+  transform: none;
+  bottom: 0;
+  top: inherit !important;
 }
 /* End */
